--- a/examples/start_stop.ini
+++ b/examples/start_stop.ini
@@ -19,25 +19,23 @@ duration=10s
 [setup]
 query=drop table if exists mytable
 query=create table mytable (id int(7))
-; Make sure to warmup the queries we will use.
-query=select * from mytable
-query=insert into mytable values (1)
-query=insert into mytable values (1), (2), (3), (4), (5)
-query=truncate table mytable
 
 [teardown]
 query=drop table mytable
 
+; For the first 4s of the test, insert 1 row at a time repeatedly in 2 threads.
 [insert]
 query=insert into mytable values (1)
-queue-depth=2
+concurrency=2
 stop=4s
 
+; After 5s, execute this query only once.
 [clear]
 query=truncate table mytable
 start=5s
 count=1
 
+; For the last 4s of the test, run 100 multi-inserts a second.
 [insert batch]
 query=insert into mytable values (1), (2), (3), (4), (5)
 rate=100
