--- a/examples/burst_load_data.ini
+++ b/examples/burst_load_data.ini
@@ -14,11 +14,17 @@
 ; limitations under the License.
 ;
 
+[setup]
+query=create table t(a varchar(20))
+
+[teardown]
+query=drop table t
+
 ;
-; Every 2 seconds, execute a batch of 10 simultaneous sleep queries. Run
+; Every 60 seconds, execute a batch of 1000 simultaneous load dat queries. Run
 ; forever.
 ;
 [burst]
-query=select sleep(1)
-batch-size=10
-rate=.5
+query=load data local infile 'hello.tsv' into table t
+batch-size=1000
+rate=0.0167
