--- a/examples/hello_world.ini
+++ b/examples/hello_world.ini
@@ -15,10 +15,7 @@
 ;
 
 ;
-; Every 2 seconds, execute a batch of 10 simultaneous sleep queries. Run
-; forever.
+; Repeatedly execute this query using one connection. Run forever.
 ;
-[burst]
-query=select sleep(1)
-batch-size=10
-rate=.5
+[hello world]
+query=select "hello world"
