--- a/examples/select_count_star.ini
+++ b/examples/select_count_star.ini
@@ -15,10 +15,20 @@
 ;
 
 ;
-; Every 2 seconds, execute a batch of 10 simultaneous sleep queries. Run
-; forever.
+; Create the table and insert 3 values before running the workload.
 ;
-[burst]
-query=select sleep(1)
-batch-size=10
-rate=.5
+[setup]
+query=create table test_table(a int)
+query=insert into test_table values (1), (2), (3)
+
+;
+; Drop the table to delete the data when dbbench exits.
+;
+[teardown]
+query=drop table test_table
+
+;
+; Repeatedly execute this query using one connection. Run forever.
+;
+[select count start]
+query=select count(*) from test_table
