--- a/examples/simple_load_data.ini
+++ b/examples/simple_load_data.ini
@@ -14,11 +14,13 @@
 ; limitations under the License.
 ;
 
-;
-; Every 2 seconds, execute a batch of 10 simultaneous sleep queries. Run
-; forever.
-;
-[burst]
-query=select sleep(1)
-batch-size=10
-rate=.5
+[setup]
+query=create table t(a varchar(20))
+query=load data local infile 'hello.tsv' into table t
+
+[teardown]
+query=drop table t
+
+[read]
+query=select count(*) from t
+rate=1
